Optimized test 2023.